// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge Component Badge renders notification 1`] = `
<div>
  <span
    class="gds-badge pill danger CLASSNAME"
  >
    BADGE
  </span>
  <div>
    TOOLTIP
  </div>
</div>
`;

exports[`Badge Component Badge renders notification 2`] = `
<div>
  <span
    class="gds-badge pill danger CLASSNAME"
  >
    <div />
  </span>
  <div>
    TOOLTIP
  </div>
</div>
`;

exports[`Badge Component Badge without children 1`] = `<div />`;
